[gd_scene load_steps=4 format=3 uid="uid://00jr1u4oc75a"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_i3ptq"]
[ext_resource type="Texture2D" uid="uid://ceowaisj7u6sf" path="res://graphics/player/player.png" id="1_i25rd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c3a7u"]
radius = 70.4557

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_i3ptq")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(34, -7)
rotation = 1.5708
texture = ExtResource("1_i25rd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c3a7u")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="GrandeTimer" type="Timer" parent="."]

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(129, 9)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(122, 20)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(120, -1)

[node name="GrenadeStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="GrenadeStartPositions"]
position = Vector2(79, -18)

[node name="Marker2D2" type="Marker2D" parent="GrenadeStartPositions"]
position = Vector2(79, 47)

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrandeTimer" to="." method="_on_grande_timer_timeout"]
